--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit==1.37.1
-numpy==1.26.4
-pandas==2.2.2
-openpyxl==3.1.5
-segmentation-models-pytorch==0.3.3
-torch==2.3.1
-torchvision==0.18.1
-timm==1.0.7
-scikit-learn==1.5.1
-pillow==10.4.0
+streamlit
+numpy
+pandas
+openpyxl
+segmentation-models-pytorch
+torch
+torchvision
+timm
+scikit-learn
+pillow
